--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,37 @@
 /* font */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 
-/* common-style */
+/* common-style or utilities*/
 body {
   font-family: "Poppins", sans-serif;
+  background-color:#F3F1FF;
+}
+main
+{
+    display: flex;
+    justify-content: center;
+}
+.container{
+    background-color: #FFFFFF;
+    width:870px;
+    padding: 30px;
+}
+hr{
+    border: 1px solid #D1D1D1;
 }
 /* top players style */
+.top-players{
+    margin-bottom: 30px;
+}
+.section-title{
+    color: #562EFF;
+    font-size: 24px;
+    margin-top: 3px;
+}
 .players {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 30px;
   /* grid-template-columns: 1fr 1fr 1fr; */
 }
 .player {
@@ -18,4 +41,8 @@ body {
 .player img {
   width: 56px;
   height: 56px;
+}
+.player-name{
+    margin-left: 16px;
+    font-size: 18px;
 }
