--- a/styles/style.css
+++ b/styles/style.css
@@ -4,29 +4,32 @@
 /* common-style or utilities*/
 body {
   font-family: "Poppins", sans-serif;
-  background-color:#F3F1FF;
+  background-color: #f3f1ff;
 }
-main
-{
-    display: flex;
-    justify-content: center;
+main {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
-.container{
-    background-color: #FFFFFF;
-    width:870px;
-    padding: 30px;
+.container {
+  background-color: #ffffff;
+  width: 870px;
+  padding: 30px;
+  border-radius: 5px; /*full container er upor radiouys apply korsi */
+  margin-top: 21px;  /*uporer section and nicher section er shathe gap dewar jonno its uses*/
 }
-hr{
-    border: 1px solid #D1D1D1;
+hr {
+  border: 1px solid #d1d1d1;
+  margin-bottom: 27px;
 }
 /* top players style */
-.top-players{
-    margin-bottom: 30px;
+.top-players {
+  margin-bottom: 30px;
 }
-.section-title{
-    color: #562EFF;
-    font-size: 24px;
-    margin-top: 3px;
+.section-title {
+  color: #562eff;
+  font-size: 24px;
+  margin-top: 3px;
 }
 .players {
   display: grid;
@@ -42,7 +45,38 @@ hr{
   width: 56px;
   height: 56px;
 }
-.player-name{
-    margin-left: 16px;
-    font-size: 18px;
+.player-name {
+  margin-left: 16px;
+  font-size: 18px;
+}
+
+/*------------------------------
+top-blog-styles
+---------------------------------*/
+.blogs {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 26px;
+}
+.blog {
+  display: flex;
+}
+.blog .thumbnail img {
+  width: 177px;
+  height: 117px;
+}
+.blog-info {
+  margin-left: 16px;
+}
+.blog-title {
+  font-size: 20px;
+}
+.blog-author {
+  color: #9f9f9f;
+  font-size: 16px;
+}
+.blog-author a {
+  color: #562eff;
+  font-size: 16px;
+  text-decoration: none;
 }
